Styling header bar.

--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -24,8 +24,14 @@ header.site_header
       &:first-child
         margin-left: 0
 
+        a
+          padding-left: 0
+
       &:last-child
         margin-right: 0
+
+        a
+          padding-right: 0
 
       a
         text-decoration: none
@@ -46,8 +52,8 @@ header.site_header
       background-size: contain
       float: left
       margin-right: 1em
-      width: 35px
-      height: 35px
+      width: 38px
+      height: 38px
       text-indent: -10000px
 
     hr
@@ -73,17 +79,17 @@ header.site_header
     nav
       font-family: Helvetica, sans-serif
       font-size: 12px
-      margin-left: -0.5em
+      margin-top: .25em
 
       li
-        margin: 0 0.1em
+        margin: 0 0.3em
 
         a
           color: $light
           padding: 0 0.3em
 
         a:hover
-          color: $medium
+          color: #fff
 
   &.big
     margin: 2em auto
