Match header background color to footer.

--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -37,7 +37,7 @@ header.site_header
         text-decoration: none
 
   &.small
-    background: rgba(0, 0, 0, .8)
+    background: $dark
     height: 60px
     overflow: hidden
     margin-top: -1000px
