--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -1,17 +1,11 @@
 .chapter-1-rethinking-retirement
-  header.site_header  
-    &.big
-      @extend .on_top_of_dark_background
-      z-index: 2
+  header.story_header
+    @extend .on_dark_background
+    z-index: 2
 
-      p
-        @include text-shadow(none)
-
-      h1
-        margin-top: 4em
-
-      nav
-        display: none
+    h1
+      @include text-shadow($dark 0 0 25px)
+      margin-top: 4em
 
   .company_photo
     z-index: 1
