--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -1,184 +1,174 @@
-header.site_header
+header.site_header,
+header.story_header
   @extend .fixed
-  @include transition(opacity .3s, margin-top .6s)
   padding: 0
   text-transform: uppercase
   width: 100%
+
+  p
+    margin: 0
+
+  nav li
+    float: left
+
+    &:first-child
+      margin-left: 0
+
+      a
+        padding-left: 0
+
+    &:last-child
+      margin-right: 0
+
+      a
+        padding-right: 0
+
+    a
+      text-decoration: none
+
+
+header.site_header
+  background: $dark
+  height: 60px
+  overflow: hidden
+  margin-top: -1000px
+  padding: .7em 0 .5em 0
+  opacity: 1 !important
   z-index: 4
+  @include transition(all .5s)
+
+  &.shown
+    margin-top: 0
 
   .contents
     padding: 0
 
-    p
-      margin: 0
+  p
+    background: image-url('pbs-light_background.svg') no-repeat left top
+    background-size: contain
+    float: left
+    margin-right: 1em
+    width: 38px
+    height: 38px
+    text-indent: -10000px
 
-    h1
-      font-family: 'Bodoni W01 Poster'
-      font-weight: normal
-      line-height: 1
-      margin: 0
+  h1
+    color: $light
+    font-family: 'Bodoni W01 Poster'
+    font-size: $font-size*0.8
+    font-weight: normal
+    line-height: 1
+    margin: 0
+
+    em
+      font-family: 'BodoniW01-PosterItalic', serif
+      font-size: $font-size
+      font-style: normal
+
+    small
+      color: $light
+      font-family: 'Adobe Caslon W01 Bd It', serif
+      font-size: $font-size*0.9
+      font-style: normal
+      padding: 0 $line/10
+      text-transform: lowercase
+
+  nav
+    font-family: Helvetica, sans-serif
+    font-size: 12px
+    margin-top: .25em
 
     li
-      float: left
-
-      &:first-child
-        margin-left: 0
-
-        a
-          padding-left: 0
-
-      &:last-child
-        margin-right: 0
-
-        a
-          padding-right: 0
+      margin: 0 0.3em
 
       a
-        text-decoration: none
-
-  &.small
-    background: $dark
-    height: 60px
-    overflow: hidden
-    margin-top: -1000px
-    padding: .7em 0 .5em 0
-    opacity: 1 !important
-
-    &.shown
-      margin-top: 0
-
-    p
-      background: image-url('pbs-light_background.svg') no-repeat left top
-      background-size: contain
-      float: left
-      margin-right: 1em
-      width: 38px
-      height: 38px
-      text-indent: -10000px
-
-    hr
-      display: none
-
-    h1
-      color: $light
-      font-size: $font-size*0.8
-
-      em
-        font-family: 'BodoniW01-PosterItalic', serif
-        font-size: $font-size
-        font-style: normal
-
-      small
         color: $light
-        font-family: 'Adobe Caslon W01 Bd It', serif
-        font-size: $font-size*0.9
-        font-style: normal
-        padding: 0 $line/10
-        text-transform: lowercase
+        padding: 0 0.3em
 
-    nav
-      font-family: Helvetica, sans-serif
-      font-size: 12px
-      margin-top: .25em
+      a:hover
+        color: #fff
 
-      li
-        margin: 0 0.3em
+header.story_header
+  margin-top: 3em
+  text-align: center
+  @include transition(opacity .3s)
 
-        a
-          color: $light
-          padding: 0 0.3em
+  p,
+  hr,
+  h1 span,
+  h1 em
+    position: relative
 
-        a:hover
-          color: #fff
+  hr
+    z-index: 1
 
-  &.big
-    margin: 2em auto
-    text-align: center
+  h1 em
+    z-index: 2
 
-    p,
-    hr,
-    h1 span,
-    h1 em
-      position: relative
+  p,
+  h1 span,
+  h1 small,
+  nav
+    z-index: 3
 
+  p
+    margin-bottom: $line*1.25
+
+    &:before,
+    &:after
+      color: $green
+      content: "★"
+      font-size: $font-size*.6
+      padding: 0 $line/4
+      vertical-align: $line*.2
+
+  hr
+    display: none
+
+  h1
+    font-size: $font-size*3.6
+    margin: -.25em 0 $line/4
+    word-spacing: -$line/2
+
+    em
+      font-family: 'BodoniW01-PosterItalic', serif
+      font-size: $font-size*6.5
+      font-style: normal
+      margin: 0
+      padding: 0 $line/8
+
+    small
+      color: $green
+      font-family: 'Adobe Caslon W01 Bd It', serif
+      font-size: $font-size*2.3
+      font-style: normal
+      padding: 0 $line/10
+      text-transform: lowercase
+      vertical-align: $line/3
+
+  nav
+    @extend .container
+    @include clearfix
+    border-top: 1px solid #888
+    border-bottom: 1px solid #888
+    line-height: 1
+    padding: $line/2 0 $line/2.5
+
+    li
+      letter-spacing: -1px
+      margin: 0 .9em
+
+  &.bordered
     hr
-      z-index: 1
-
-    h1 em
-      z-index: 2
-
-    p,
-    h1 span,
-    h1 small,
-    nav
-      z-index: 3
-
-    p
-      margin: 0 0 $line*1.25
-
-      &:before,
-      &:after
-        color: $green
-        content: "★"
-        font-size: $font-size*.6
-        padding: 0 $line/4
-        vertical-align: $line*.2
-
-    hr
-      display: none
+      display: block
 
     h1
-      font-size: $font-size*3.6
-      margin: -.25em 0 $line/4
-      word-spacing: -$line/2
+      margin-top: -$line*1.8
 
       em
-        font-family: 'BodoniW01-PosterItalic', serif
-        font-size: $font-size*6.5
-        font-style: normal
-        margin: 0
-        padding: 0 $line/8
+        background: #fff
 
-      small
-        color: $green
-        font-family: 'Adobe Caslon W01 Bd It', serif
-        font-size: $font-size*2.3
-        font-style: normal
-        padding: 0 $line/10
-        text-transform: lowercase
-        vertical-align: $line/3
-
-    nav
-      @extend .container
-      @include clearfix
-      border-top: 1px solid #888
-      border-bottom: 1px solid #888
-      line-height: 1
-      padding: $line/2 0 $line/2.5
-
-      li
-        letter-spacing: -1px
-        margin: 0 .9em
-
-    &.bordered
-      hr
-        display: block
-
-      h1
-        margin-top: -$line*1.8
-
-        em
-          background: #fff
-
-    &.on_top_of_dark_background
-      @include text-shadow($dark 0 0 25px)
-
-      h1
-        color: #fff
-        
-        small
-          color: #fff
-
-      nav
-        a
-          color: #fff
+  &.on_dark_background
+    h1,
+    h1 small
+      color: #fff
