--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,8 @@ section {
   z-index: 3; }
 
 /* line 74, sass/_base.sass */
-.fixed, header.site_header {
+.fixed, header.site_header,
+header.story_header {
   position: fixed;
   left: 0;
   top: 0; }
@@ -190,195 +191,197 @@ section {
     width: 25%; } }
 
 /* line 31, sass/_grid.sass */
-.container, .contents, header.site_header.big nav {
+.container, .contents, header.story_header nav {
   margin: 0 auto;
   max-width: 1000px;
   padding: 24px 10px; }
 
 /* line 1, sass/_header.sass */
-header.site_header {
-  -webkit-transition: opacity 0.3s, margin-top 0.6s;
-  -moz-transition: opacity 0.3s, margin-top 0.6s;
-  -o-transition: opacity 0.3s, margin-top 0.6s;
-  transition: opacity 0.3s, margin-top 0.6s;
+header.site_header,
+header.story_header {
   padding: 0;
   text-transform: uppercase;
-  width: 100%;
-  z-index: 4; }
-  /* line 9, sass/_header.sass */
+  width: 100%; }
+  /* line 8, sass/_header.sass */
+  header.site_header p,
+  header.story_header p {
+    margin: 0; }
+  /* line 11, sass/_header.sass */
+  header.site_header nav li,
+  header.story_header nav li {
+    float: left; }
+    /* line 14, sass/_header.sass */
+    header.site_header nav li:first-child,
+    header.story_header nav li:first-child {
+      margin-left: 0; }
+      /* line 17, sass/_header.sass */
+      header.site_header nav li:first-child a,
+      header.story_header nav li:first-child a {
+        padding-left: 0; }
+    /* line 20, sass/_header.sass */
+    header.site_header nav li:last-child,
+    header.story_header nav li:last-child {
+      margin-right: 0; }
+      /* line 23, sass/_header.sass */
+      header.site_header nav li:last-child a,
+      header.story_header nav li:last-child a {
+        padding-right: 0; }
+    /* line 26, sass/_header.sass */
+    header.site_header nav li a,
+    header.story_header nav li a {
+      text-decoration: none; }
+
+/* line 30, sass/_header.sass */
+header.site_header {
+  background: #383838;
+  height: 60px;
+  overflow: hidden;
+  margin-top: -1000px;
+  padding: 0.7em 0 0.5em 0;
+  opacity: 1 !important;
+  z-index: 4;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s; }
+  /* line 40, sass/_header.sass */
+  header.site_header.shown {
+    margin-top: 0; }
+  /* line 43, sass/_header.sass */
   header.site_header .contents {
     padding: 0; }
-    /* line 12, sass/_header.sass */
-    header.site_header .contents p {
-      margin: 0; }
-    /* line 15, sass/_header.sass */
-    header.site_header .contents h1 {
-      font-family: "Bodoni W01 Poster";
-      font-weight: normal;
-      line-height: 1;
-      margin: 0; }
-    /* line 21, sass/_header.sass */
-    header.site_header .contents li {
-      float: left; }
-      /* line 24, sass/_header.sass */
-      header.site_header .contents li:first-child {
-        margin-left: 0; }
-        /* line 27, sass/_header.sass */
-        header.site_header .contents li:first-child a {
-          padding-left: 0; }
-      /* line 30, sass/_header.sass */
-      header.site_header .contents li:last-child {
-        margin-right: 0; }
-        /* line 33, sass/_header.sass */
-        header.site_header .contents li:last-child a {
-          padding-right: 0; }
-      /* line 36, sass/_header.sass */
-      header.site_header .contents li a {
-        text-decoration: none; }
-  /* line 39, sass/_header.sass */
-  header.site_header.small {
-    background: #383838;
-    height: 60px;
-    overflow: hidden;
-    margin-top: -1000px;
-    padding: 0.7em 0 0.5em 0;
-    opacity: 1 !important; }
-    /* line 47, sass/_header.sass */
-    header.site_header.small.shown {
-      margin-top: 0; }
-    /* line 50, sass/_header.sass */
-    header.site_header.small p {
-      background: url('../img/pbs-light_background.svg?1369272538') no-repeat left top;
-      background-size: contain;
-      float: left;
-      margin-right: 1em;
-      width: 38px;
-      height: 38px;
-      text-indent: -10000px; }
-    /* line 59, sass/_header.sass */
-    header.site_header.small hr {
-      display: none; }
-    /* line 62, sass/_header.sass */
-    header.site_header.small h1 {
+  /* line 46, sass/_header.sass */
+  header.site_header p {
+    background: url('../img/pbs-light_background.svg?1369272538') no-repeat left top;
+    background-size: contain;
+    float: left;
+    margin-right: 1em;
+    width: 38px;
+    height: 38px;
+    text-indent: -10000px; }
+  /* line 55, sass/_header.sass */
+  header.site_header h1 {
+    color: #aaaaaa;
+    font-family: "Bodoni W01 Poster";
+    font-size: 12.8px;
+    font-weight: normal;
+    line-height: 1;
+    margin: 0; }
+    /* line 63, sass/_header.sass */
+    header.site_header h1 em {
+      font-family: "BodoniW01-PosterItalic", serif;
+      font-size: 16px;
+      font-style: normal; }
+    /* line 68, sass/_header.sass */
+    header.site_header h1 small {
       color: #aaaaaa;
-      font-size: 12.8px; }
-      /* line 66, sass/_header.sass */
-      header.site_header.small h1 em {
-        font-family: "BodoniW01-PosterItalic", serif;
-        font-size: 16px;
-        font-style: normal; }
-      /* line 71, sass/_header.sass */
-      header.site_header.small h1 small {
-        color: #aaaaaa;
-        font-family: "Adobe Caslon W01 Bd It", serif;
-        font-size: 14.4px;
-        font-style: normal;
-        padding: 0 2.4px;
-        text-transform: lowercase; }
-    /* line 79, sass/_header.sass */
-    header.site_header.small nav {
-      font-family: Helvetica, sans-serif;
-      font-size: 12px;
-      margin-top: 0.25em; }
+      font-family: "Adobe Caslon W01 Bd It", serif;
+      font-size: 14.4px;
+      font-style: normal;
+      padding: 0 2.4px;
+      text-transform: lowercase; }
+  /* line 76, sass/_header.sass */
+  header.site_header nav {
+    font-family: Helvetica, sans-serif;
+    font-size: 12px;
+    margin-top: 0.25em; }
+    /* line 81, sass/_header.sass */
+    header.site_header nav li {
+      margin: 0 0.3em; }
       /* line 84, sass/_header.sass */
-      header.site_header.small nav li {
-        margin: 0 0.3em; }
-        /* line 87, sass/_header.sass */
-        header.site_header.small nav li a {
-          color: #aaaaaa;
-          padding: 0 0.3em; }
-        /* line 91, sass/_header.sass */
-        header.site_header.small nav li a:hover {
-          color: white; }
-  /* line 94, sass/_header.sass */
-  header.site_header.big {
-    margin: 2em auto;
-    text-align: center; }
-    /* line 98, sass/_header.sass */
-    header.site_header.big p,
-    header.site_header.big hr,
-    header.site_header.big h1 span,
-    header.site_header.big h1 em {
-      position: relative; }
-    /* line 104, sass/_header.sass */
-    header.site_header.big hr {
-      z-index: 1; }
-    /* line 107, sass/_header.sass */
-    header.site_header.big h1 em {
-      z-index: 2; }
-    /* line 110, sass/_header.sass */
-    header.site_header.big p,
-    header.site_header.big h1 span,
-    header.site_header.big h1 small,
-    header.site_header.big nav {
-      z-index: 3; }
-    /* line 116, sass/_header.sass */
-    header.site_header.big p {
-      margin: 0 0 30px; }
-      /* line 119, sass/_header.sass */
-      header.site_header.big p:before, header.site_header.big p:after {
-        color: #548e85;
-        content: "★";
-        font-size: 9.6px;
-        padding: 0 6px;
-        vertical-align: 4.8px; }
-    /* line 127, sass/_header.sass */
-    header.site_header.big hr {
-      display: none; }
-    /* line 130, sass/_header.sass */
-    header.site_header.big h1 {
-      font-size: 57.6px;
-      margin: -0.25em 0 6px;
-      word-spacing: -12px; }
-      /* line 135, sass/_header.sass */
-      header.site_header.big h1 em {
-        font-family: "BodoniW01-PosterItalic", serif;
-        font-size: 104px;
-        font-style: normal;
-        margin: 0;
-        padding: 0 3px; }
-      /* line 142, sass/_header.sass */
-      header.site_header.big h1 small {
-        color: #548e85;
-        font-family: "Adobe Caslon W01 Bd It", serif;
-        font-size: 36.8px;
-        font-style: normal;
-        padding: 0 2.4px;
-        text-transform: lowercase;
-        vertical-align: 8px; }
-    /* line 151, sass/_header.sass */
-    header.site_header.big nav {
-      overflow: hidden;
-      *zoom: 1;
-      border-top: 1px solid #888888;
-      border-bottom: 1px solid #888888;
-      line-height: 1;
-      padding: 12px 0 9.6px; }
-      /* line 159, sass/_header.sass */
-      header.site_header.big nav li {
-        letter-spacing: -1px;
-        margin: 0 0.9em; }
-    /* line 164, sass/_header.sass */
-    header.site_header.big.bordered hr {
-      display: block; }
-    /* line 167, sass/_header.sass */
-    header.site_header.big.bordered h1 {
-      margin-top: -43.2px; }
-      /* line 170, sass/_header.sass */
-      header.site_header.big.bordered h1 em {
-        background: white; }
-    /* line 173, sass/_header.sass */
-    header.site_header.big.on_top_of_dark_background, .chapter-1-rethinking-retirement header.site_header.big {
-      text-shadow: #383838 0 0 25px; }
-      /* line 176, sass/_header.sass */
-      header.site_header.big.on_top_of_dark_background h1, .chapter-1-rethinking-retirement header.site_header.big h1 {
+      header.site_header nav li a {
+        color: #aaaaaa;
+        padding: 0 0.3em; }
+      /* line 88, sass/_header.sass */
+      header.site_header nav li a:hover {
         color: white; }
-        /* line 179, sass/_header.sass */
-        header.site_header.big.on_top_of_dark_background h1 small, .chapter-1-rethinking-retirement header.site_header.big h1 small {
-          color: white; }
-      /* line 183, sass/_header.sass */
-      header.site_header.big.on_top_of_dark_background nav a, .chapter-1-rethinking-retirement header.site_header.big nav a {
-        color: white; }
+
+/* line 91, sass/_header.sass */
+header.story_header {
+  margin-top: 3em;
+  text-align: center;
+  -webkit-transition: opacity 0.3s;
+  -moz-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
+  transition: opacity 0.3s; }
+  /* line 96, sass/_header.sass */
+  header.story_header p,
+  header.story_header hr,
+  header.story_header h1 span,
+  header.story_header h1 em {
+    position: relative; }
+  /* line 102, sass/_header.sass */
+  header.story_header hr {
+    z-index: 1; }
+  /* line 105, sass/_header.sass */
+  header.story_header h1 em {
+    z-index: 2; }
+  /* line 108, sass/_header.sass */
+  header.story_header p,
+  header.story_header h1 span,
+  header.story_header h1 small,
+  header.story_header nav {
+    z-index: 3; }
+  /* line 114, sass/_header.sass */
+  header.story_header p {
+    margin-bottom: 30px; }
+    /* line 117, sass/_header.sass */
+    header.story_header p:before, header.story_header p:after {
+      color: #548e85;
+      content: "★";
+      font-size: 9.6px;
+      padding: 0 6px;
+      vertical-align: 4.8px; }
+  /* line 125, sass/_header.sass */
+  header.story_header hr {
+    display: none; }
+  /* line 128, sass/_header.sass */
+  header.story_header h1 {
+    font-size: 57.6px;
+    margin: -0.25em 0 6px;
+    word-spacing: -12px; }
+    /* line 133, sass/_header.sass */
+    header.story_header h1 em {
+      font-family: "BodoniW01-PosterItalic", serif;
+      font-size: 104px;
+      font-style: normal;
+      margin: 0;
+      padding: 0 3px; }
+    /* line 140, sass/_header.sass */
+    header.story_header h1 small {
+      color: #548e85;
+      font-family: "Adobe Caslon W01 Bd It", serif;
+      font-size: 36.8px;
+      font-style: normal;
+      padding: 0 2.4px;
+      text-transform: lowercase;
+      vertical-align: 8px; }
+  /* line 149, sass/_header.sass */
+  header.story_header nav {
+    overflow: hidden;
+    *zoom: 1;
+    border-top: 1px solid #888888;
+    border-bottom: 1px solid #888888;
+    line-height: 1;
+    padding: 12px 0 9.6px; }
+    /* line 157, sass/_header.sass */
+    header.story_header nav li {
+      letter-spacing: -1px;
+      margin: 0 0.9em; }
+  /* line 162, sass/_header.sass */
+  header.story_header.bordered hr {
+    display: block; }
+  /* line 165, sass/_header.sass */
+  header.story_header.bordered h1 {
+    margin-top: -43.2px; }
+    /* line 168, sass/_header.sass */
+    header.story_header.bordered h1 em {
+      background: white; }
+  /* line 172, sass/_header.sass */
+  header.story_header.on_dark_background h1, .chapter-1-rethinking-retirement header.story_header h1,
+  header.story_header.on_dark_background h1 small,
+  .chapter-1-rethinking-retirement header.story_header h1 small {
+    color: white; }
 
 /* line 1, sass/_footer.sass */
 footer {
@@ -431,26 +434,21 @@ footer {
   footer a {
     color: white; }
 
-/* line 3, sass/_chapter1.sass */
-.chapter-1-rethinking-retirement header.site_header.big {
+/* line 2, sass/_chapter1.sass */
+.chapter-1-rethinking-retirement header.story_header {
   z-index: 2; }
-  /* line 7, sass/_chapter1.sass */
-  .chapter-1-rethinking-retirement header.site_header.big p {
-    text-shadow: none; }
-  /* line 10, sass/_chapter1.sass */
-  .chapter-1-rethinking-retirement header.site_header.big h1 {
+  /* line 6, sass/_chapter1.sass */
+  .chapter-1-rethinking-retirement header.story_header h1 {
+    text-shadow: #383838 0 0 25px;
     margin-top: 4em; }
-  /* line 13, sass/_chapter1.sass */
-  .chapter-1-rethinking-retirement header.site_header.big nav {
-    display: none; }
-/* line 16, sass/_chapter1.sass */
+/* line 10, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement .company_photo {
   z-index: 1;
   -webkit-transition: opacity 0.3s;
   -moz-transition: opacity 0.3s;
   -o-transition: opacity 0.3s;
   transition: opacity 0.3s; }
-/* line 20, sass/_chapter1.sass */
+/* line 14, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement .intro {
   background: pink;
   margin-top: 80%; }
