--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ header.story_header {
   /* line 11, sass/_header.sass */
   header.site_header nav li,
   header.story_header nav li {
-    float: left; }
+    display: inline-block; }
     /* line 14, sass/_header.sass */
     header.site_header nav li:first-child,
     header.story_header nav li:first-child {
@@ -237,66 +237,70 @@ header.site_header {
   height: 60px;
   overflow: hidden;
   margin-top: -1000px;
-  padding: 0.7em 0 0.5em 0;
+  padding: 0.5em 0 0.5em 0;
   opacity: 1 !important;
+  text-align: center;
   z-index: 4;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s; }
-  /* line 40, sass/_header.sass */
+  /* line 41, sass/_header.sass */
   header.site_header.shown {
     margin-top: 0; }
-  /* line 43, sass/_header.sass */
+  /* line 44, sass/_header.sass */
   header.site_header .contents {
     padding: 0; }
-  /* line 46, sass/_header.sass */
-  header.site_header p {
+  /* line 47, sass/_header.sass */
+  header.site_header a.pbs {
     background: url('../img/pbs-light_background.svg?1369272538') no-repeat left top;
     background-size: contain;
     float: left;
-    margin-right: 1em;
+    margin: 0.2em 1em 0 0;
     width: 38px;
     height: 38px;
     text-indent: -10000px; }
-  /* line 55, sass/_header.sass */
-  header.site_header h1 {
-    color: #aaaaaa;
-    font-family: "Bodoni W01 Poster";
-    font-size: 12.8px;
-    font-weight: normal;
-    line-height: 1;
-    margin: 0; }
-    /* line 63, sass/_header.sass */
-    header.site_header h1 em {
-      font-family: "BodoniW01-PosterItalic", serif;
-      font-size: 16px;
-      font-style: normal; }
-    /* line 68, sass/_header.sass */
-    header.site_header h1 small {
+  /* line 56, sass/_header.sass */
+  header.site_header a.title {
+    text-decoration: none; }
+    /* line 59, sass/_header.sass */
+    header.site_header a.title h1 {
       color: #aaaaaa;
-      font-family: "Adobe Caslon W01 Bd It", serif;
-      font-size: 14.4px;
-      font-style: normal;
-      padding: 0 2.4px;
-      text-transform: lowercase; }
-  /* line 76, sass/_header.sass */
+      font-family: "Bodoni W01 Poster";
+      font-size: 16px;
+      font-weight: normal;
+      line-height: 1;
+      margin: 0; }
+      /* line 67, sass/_header.sass */
+      header.site_header a.title h1 em {
+        font-family: "BodoniW01-PosterItalic", serif;
+        font-size: 19.2px;
+        font-style: normal; }
+      /* line 72, sass/_header.sass */
+      header.site_header a.title h1 small {
+        color: #aaaaaa;
+        font-family: "Adobe Caslon W01 Bd It", serif;
+        font-size: 16px;
+        font-style: normal;
+        padding: 0 2.4px;
+        text-transform: lowercase; }
+  /* line 80, sass/_header.sass */
   header.site_header nav {
     font-family: Helvetica, sans-serif;
-    font-size: 12px;
+    font-size: 11px;
     margin-top: 0.25em; }
-    /* line 81, sass/_header.sass */
+    /* line 85, sass/_header.sass */
     header.site_header nav li {
-      margin: 0 0.3em; }
-      /* line 84, sass/_header.sass */
+      margin: 0 0.6em; }
+      /* line 88, sass/_header.sass */
       header.site_header nav li a {
         color: #aaaaaa;
         padding: 0 0.3em; }
-      /* line 88, sass/_header.sass */
+      /* line 92, sass/_header.sass */
       header.site_header nav li a:hover {
         color: white; }
 
-/* line 91, sass/_header.sass */
+/* line 95, sass/_header.sass */
 header.story_header {
   margin-top: 3em;
   text-align: center;
@@ -304,50 +308,50 @@ header.story_header {
   -moz-transition: opacity 0.3s;
   -o-transition: opacity 0.3s;
   transition: opacity 0.3s; }
-  /* line 96, sass/_header.sass */
+  /* line 100, sass/_header.sass */
   header.story_header p,
   header.story_header hr,
   header.story_header h1 span,
   header.story_header h1 em {
     position: relative; }
-  /* line 102, sass/_header.sass */
+  /* line 106, sass/_header.sass */
   header.story_header hr {
     z-index: 1; }
-  /* line 105, sass/_header.sass */
+  /* line 109, sass/_header.sass */
   header.story_header h1 em {
     z-index: 2; }
-  /* line 108, sass/_header.sass */
+  /* line 112, sass/_header.sass */
   header.story_header p,
   header.story_header h1 span,
   header.story_header h1 small,
   header.story_header nav {
     z-index: 3; }
-  /* line 114, sass/_header.sass */
+  /* line 118, sass/_header.sass */
   header.story_header p {
     margin-bottom: 30px; }
-    /* line 117, sass/_header.sass */
+    /* line 121, sass/_header.sass */
     header.story_header p:before, header.story_header p:after {
       color: #548e85;
       content: "★";
       font-size: 9.6px;
       padding: 0 6px;
       vertical-align: 4.8px; }
-  /* line 125, sass/_header.sass */
+  /* line 129, sass/_header.sass */
   header.story_header hr {
     display: none; }
-  /* line 128, sass/_header.sass */
+  /* line 132, sass/_header.sass */
   header.story_header h1 {
     font-size: 57.6px;
     margin: -0.25em 0 6px;
     word-spacing: -12px; }
-    /* line 133, sass/_header.sass */
+    /* line 137, sass/_header.sass */
     header.story_header h1 em {
       font-family: "BodoniW01-PosterItalic", serif;
       font-size: 104px;
       font-style: normal;
       margin: 0;
       padding: 0 3px; }
-    /* line 140, sass/_header.sass */
+    /* line 144, sass/_header.sass */
     header.story_header h1 small {
       color: #548e85;
       font-family: "Adobe Caslon W01 Bd It", serif;
@@ -356,7 +360,7 @@ header.story_header {
       padding: 0 2.4px;
       text-transform: lowercase;
       vertical-align: 8px; }
-  /* line 149, sass/_header.sass */
+  /* line 153, sass/_header.sass */
   header.story_header nav {
     overflow: hidden;
     *zoom: 1;
@@ -364,20 +368,20 @@ header.story_header {
     border-bottom: 1px solid #888888;
     line-height: 1;
     padding: 12px 0 9.6px; }
-    /* line 157, sass/_header.sass */
+    /* line 161, sass/_header.sass */
     header.story_header nav li {
       letter-spacing: -1px;
       margin: 0 0.9em; }
-  /* line 162, sass/_header.sass */
+  /* line 166, sass/_header.sass */
   header.story_header.bordered hr {
     display: block; }
-  /* line 165, sass/_header.sass */
+  /* line 169, sass/_header.sass */
   header.story_header.bordered h1 {
     margin-top: -43.2px; }
-    /* line 168, sass/_header.sass */
+    /* line 172, sass/_header.sass */
     header.story_header.bordered h1 em {
       background: white; }
-  /* line 172, sass/_header.sass */
+  /* line 176, sass/_header.sass */
   header.story_header.on_dark_background h1, .chapter-1-rethinking-retirement header.story_header h1,
   header.story_header.on_dark_background h1 small,
   .chapter-1-rethinking-retirement header.story_header h1 small {
