--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -84,13 +84,19 @@ header.site_header
 
     li
       margin: 0 0.6em
+      padding-bottom: 5px
 
       a
         color: $light
         padding: 0 0.3em
+        @include transition(all, .2s)
 
-      a:hover
-        color: #fff
+      &:hover,
+      &.current_chapter
+        @include triangle-bottom(7px, #fff, up)
+        
+        a
+          color: #fff
 
 header.story_header
   margin-top: 3em
