--- a/css/sass/_mixins.sass
+++ b/css/sass/_mixins.sass
@@ -13,15 +13,18 @@
     border-bottom: $size solid $color
     margin-top: - $size
 
-@mixin triangle-bottom($size, $color)
+@mixin triangle-bottom($size, $color, $direction)
   &:after
     @extend %triangle-base
     bottom: 0
     margin-left: - $size
     border-left: $size solid transparent
     border-right: $size solid transparent
-    border-top: $size solid $color
-    margin-bottom: - $size
+    @if $direction == "down"
+      border-top: $size solid $color
+      margin-bottom: - $size
+    @else
+      border-bottom: $size solid $color
       
 @mixin triangle-left($size, $color)
   &:before
