--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -1,22 +1,31 @@
 @import "compass"
 @import "compass/reset"
 
+// Dimensions
+
 $tablet: 500px
 $desktop: 1000px
 
 $container: $desktop
 
-// Available Fonts:
-// font-family: 'Bodoni MT W01'
-// font-family: 'AdobeCaslonW01-Regular'
-// font-family: 'Adobe Caslon W01 It'
-// font-family: 'Adobe Caslon W01 Bd'
-// font-family: 'Adobe Caslon W01 Bd It'
-// font-family: 'BodoniW01-PosterItalic'
-// font-family: 'Bodoni W01 Poster'
+// Fonts
 
-$font-family-heading: 'BodoniW01-PosterItalic', serif
-$font-family-body: 'AdobeCaslonW01-Regular', sans-serif
+$bodoni: 'Bodoni MT W01'
+$bodoni-poster: 'Bodoni W01 Poster'
+$bodoni-poster-italic: 'BodoniW01-PosterItalic'
+
+$caslon: 'AdobeCaslonW01-Regular'
+$caslon-bold: 'Adobe Caslon W01 Bd'
+$caslon-italic: 'Adobe Caslon W01 It'
+$caslon-bold-italic: 'Adobe Caslon W01 Bd It'
+
+$proxima-bold: 'Proxima N W01 Bold'
+$proxima-semibold: 'Proxima N W01 Smbd'
+
+$font-chapter: $bodoni, 'Times New Roman', Times, serif
+$font-heading: $proxima-bold, 'Century Gothic', Helvetica, Arial, sans-serif 
+$font-subheading: $proxima-semibold, 'Century Gothic', Helvetica, Arial, sans-serif
+$font-body: $caslon, 'Times New Roman', Times, serif
 
 $font-size: 16px
 $font-size-small: 12px
