--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ body {
 html {
   background: white;
   color: #383838;
-  font-family: "AdobeCaslonW01-Regular", sans-serif;
+  font-family: "AdobeCaslonW01-Regular", "Times New Roman", Times, serif;
   font-size: 16px;
   line-height: 24px;
   -webkit-font-smoothing: antialiased; }
@@ -94,66 +94,88 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "BodoniW01-PosterItalic", serif;
   font-weight: normal;
   line-height: 1; }
 
-/* line 37, sass/_base.sass */
-h1 {
-  font-size: 48px;
-  margin-bottom: 24px; }
+/* line 36, sass/_base.sass */
+h1,
+h2 {
+  font-family: "Bodoni W01 Poster";
+  text-align: center;
+  text-transform: uppercase; }
 
-/* line 41, sass/_base.sass */
+/* line 42, sass/_base.sass */
 h2 {
   font-size: 30px;
   margin: 24px 0;
   padding: 24px 0 0; }
 
-/* line 46, sass/_base.sass */
+/* line 47, sass/_base.sass */
 h3 {
   font-size: 18px;
   margin: 30px 0 12px; }
 
-/* line 50, sass/_base.sass */
+/* line 51, sass/_base.sass */
 p {
   margin: 24px 0; }
 
-/* line 53, sass/_base.sass */
+/* line 54, sass/_base.sass */
 strong {
   font-weight: bold; }
 
-/* line 56, sass/_base.sass */
+/* line 57, sass/_base.sass */
 em {
   font-style: italic; }
 
-/* line 61, sass/_base.sass */
+/* line 62, sass/_base.sass */
 article {
   width: 100%; }
 
-/* line 64, sass/_base.sass */
+/* line 65, sass/_base.sass */
 section {
   background: white;
   width: 100%;
   z-index: 3; }
 
-/* line 74, sass/_base.sass */
+/* line 75, sass/_base.sass */
 .fixed, header.site_header,
 header.story_header {
   position: fixed;
   left: 0;
   top: 0; }
 
-/* line 79, sass/_base.sass */
+/* line 80, sass/_base.sass */
 .bleed {
   width: 100%;
   height: 100%; }
-  /* line 83, sass/_base.sass */
+  /* line 84, sass/_base.sass */
   .bleed img {
     width: 100%; }
 
-/* line 86, sass/_base.sass */
-.white_background {
-  background: white; }
+/* line 87, sass/_base.sass */
+.chapter {
+  text-align: center; }
+  /* line 90, sass/_base.sass */
+  .chapter p {
+    font-family: "Bodoni MT W01", "Times New Roman", Times, serif;
+    text-transform: uppercase; }
+
+/* line 94, sass/_base.sass */
+.major, .major-alt, .chapter-1-rethinking-retirement .intro p.second, .chapter-1-rethinking-retirement .intro p.first,
+.chapter-1-rethinking-retirement .intro p.third {
+  font-family: "Proxima N W01 Bold", "Century Gothic", Helvetica, Arial, sans-serif;
+  font-size: 30px;
+  text-transform: uppercase;
+  line-height: 1.3; }
+
+/* line 100, sass/_base.sass */
+.major-alt, .chapter-1-rethinking-retirement .intro p.second {
+  border-top: 2px solid #383838;
+  border-bottom: 2px solid #383838;
+  font-size: 20px;
+  margin: 0 auto;
+  padding: 0.5em 0;
+  width: 75%; }
 
 /* line 1, sass/_grid.sass */
 .half, .twothirds, .onethird, .threefourths, .onefourth {
@@ -194,7 +216,7 @@ header.story_header {
 .container, .contents, header.story_header nav {
   margin: 0 auto;
   max-width: 1000px;
-  padding: 24px 10px; }
+  padding: 48px 10px; }
 
 /* line 1, sass/_mixins.sass */
 header.site_header nav li:hover:after, header.site_header nav li.current_chapter:after {
@@ -346,30 +368,31 @@ header.story_header {
     z-index: 3; }
   /* line 124, sass/_header.sass */
   header.story_header p {
+    font-family: "Bodoni MT W01";
     margin-bottom: 30px; }
-    /* line 127, sass/_header.sass */
+    /* line 128, sass/_header.sass */
     header.story_header p:before, header.story_header p:after {
       color: #548e85;
       content: "★";
       font-size: 9.6px;
       padding: 0 6px;
       vertical-align: 4.8px; }
-  /* line 135, sass/_header.sass */
+  /* line 136, sass/_header.sass */
   header.story_header hr {
     display: none; }
-  /* line 138, sass/_header.sass */
+  /* line 139, sass/_header.sass */
   header.story_header h1 {
     font-size: 57.6px;
     margin: -0.25em 0 6px;
     word-spacing: -12px; }
-    /* line 143, sass/_header.sass */
+    /* line 144, sass/_header.sass */
     header.story_header h1 em {
       font-family: "BodoniW01-PosterItalic", serif;
       font-size: 104px;
       font-style: normal;
       margin: 0;
       padding: 0 3px; }
-    /* line 150, sass/_header.sass */
+    /* line 151, sass/_header.sass */
     header.story_header h1 small {
       color: #548e85;
       font-family: "Adobe Caslon W01 Bd It", serif;
@@ -378,7 +401,7 @@ header.story_header {
       padding: 0 2.4px;
       text-transform: lowercase;
       vertical-align: 8px; }
-  /* line 159, sass/_header.sass */
+  /* line 160, sass/_header.sass */
   header.story_header nav {
     overflow: hidden;
     *zoom: 1;
@@ -386,20 +409,20 @@ header.story_header {
     border-bottom: 1px solid #888888;
     line-height: 1;
     padding: 12px 0 9.6px; }
-    /* line 167, sass/_header.sass */
+    /* line 168, sass/_header.sass */
     header.story_header nav li {
       letter-spacing: -1px;
       margin: 0 0.9em; }
-  /* line 172, sass/_header.sass */
+  /* line 173, sass/_header.sass */
   header.story_header.bordered hr {
     display: block; }
-  /* line 175, sass/_header.sass */
+  /* line 176, sass/_header.sass */
   header.story_header.bordered h1 {
     margin-top: -43.2px; }
-    /* line 178, sass/_header.sass */
+    /* line 179, sass/_header.sass */
     header.story_header.bordered h1 em {
       background: white; }
-  /* line 182, sass/_header.sass */
+  /* line 183, sass/_header.sass */
   header.story_header.on_dark_background h1, .chapter-1-rethinking-retirement header.story_header h1,
   header.story_header.on_dark_background h1 small,
   .chapter-1-rethinking-retirement header.story_header h1 small {
@@ -472,8 +495,8 @@ footer {
   transition: opacity 0.3s; }
 /* line 14, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement .intro {
-  background: pink;
-  margin-top: 80%; }
+  margin-top: 80%;
+  text-align: center; }
 
 /* line 2, sass/_chapter4.sass */
 .how_long_work .under_65 {
