--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -1,4 +1,4 @@
-.chapter-1-rethinking-retirement
+.chapter-1-rethinking-retirement article
   header.story_header
     @extend .on_dark_background
     z-index: 2
@@ -21,3 +21,7 @@
 
     p.second
       @extend .major-alt
+
+  .chapter_title
+    @extend .on_dark_background
+    background-image: image-url('1/path.jpg')
