--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -105,3 +105,25 @@ section
   margin: 0 auto
   padding: .5em 0
   width: 75% 
+
+.chapter_title
+  text-align: center
+  text-transform: uppercase
+  background-attachment: fixed
+  background-position: center
+  background-size: cover
+
+  .contents
+    padding: 12em 0
+
+  p
+    font-size: $font-size
+
+  h2
+    font-size: 44px
+  
+  &.on_dark_background
+    p,
+    h2
+      color: #fff
+      @include text-shadow($dark 0 0 25px)
