--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -117,12 +117,21 @@ section
     padding: 12em 0
 
   p
-    font-size: $font-size
+    border-bottom: 2px solid $dark
+    display: inline-block
+    font-size: $font-size*0.9
+    letter-spacing: 1px
+    margin: 0 auto
+    padding: 0 1em .25em 1em
 
   h2
     font-size: 44px
+    margin: 0
   
   &.on_dark_background
+    p
+      border-bottom: 2px solid rgba(255, 255, 255, .6)
+
     p,
     h2
       color: #fff
