Darker current markers in navigation.

--- a/css/style.css
+++ b/css/style.css
@@ -352,8 +352,12 @@ header.site_header {
     /* line 85, sass/_header.sass */
     header.site_header nav li {
       margin: 0 0.6em;
-      padding-bottom: 5px; }
-      /* line 89, sass/_header.sass */
+      padding-bottom: 5px;
+      -webkit-transition: all, 0.2s;
+      -moz-transition: all, 0.2s;
+      -o-transition: all, 0.2s;
+      transition: all, 0.2s; }
+      /* line 90, sass/_header.sass */
       header.site_header nav li a {
         color: #aaaaaa;
         padding: 0 0.3em;
@@ -367,12 +371,12 @@ header.site_header {
         margin-left: -7px;
         border-left: 7px solid transparent;
         border-right: 7px solid transparent;
-        border-bottom: 7px solid white; }
-      /* line 98, sass/_header.sass */
+        border-bottom: 7px solid #888888; }
+      /* line 99, sass/_header.sass */
       header.site_header nav li:hover a, header.site_header nav li.current_chapter a {
         color: white; }
 
-/* line 101, sass/_header.sass */
+/* line 102, sass/_header.sass */
 header.story_header {
   margin-top: 3em;
   text-align: center;
@@ -380,51 +384,51 @@ header.story_header {
   -moz-transition: opacity 0.3s;
   -o-transition: opacity 0.3s;
   transition: opacity 0.3s; }
-  /* line 106, sass/_header.sass */
+  /* line 107, sass/_header.sass */
   header.story_header p,
   header.story_header hr,
   header.story_header h1 span,
   header.story_header h1 em {
     position: relative; }
-  /* line 112, sass/_header.sass */
+  /* line 113, sass/_header.sass */
   header.story_header hr {
     z-index: 1; }
-  /* line 115, sass/_header.sass */
+  /* line 116, sass/_header.sass */
   header.story_header h1 em {
     z-index: 2; }
-  /* line 118, sass/_header.sass */
+  /* line 119, sass/_header.sass */
   header.story_header p,
   header.story_header h1 span,
   header.story_header h1 small,
   header.story_header nav {
     z-index: 3; }
-  /* line 124, sass/_header.sass */
+  /* line 125, sass/_header.sass */
   header.story_header p {
     font-family: "Bodoni MT W01";
     margin-bottom: 30px; }
-    /* line 128, sass/_header.sass */
+    /* line 129, sass/_header.sass */
     header.story_header p:before, header.story_header p:after {
       color: #548e85;
       content: "★";
       font-size: 9.6px;
       padding: 0 6px;
       vertical-align: 4.8px; }
-  /* line 136, sass/_header.sass */
+  /* line 137, sass/_header.sass */
   header.story_header hr {
     display: none; }
-  /* line 139, sass/_header.sass */
+  /* line 140, sass/_header.sass */
   header.story_header h1 {
     font-size: 57.6px;
     margin: -0.25em 0 6px;
     word-spacing: -12px; }
-    /* line 144, sass/_header.sass */
+    /* line 145, sass/_header.sass */
     header.story_header h1 em {
       font-family: "BodoniW01-PosterItalic", serif;
       font-size: 104px;
       font-style: normal;
       margin: 0;
       padding: 0 3px; }
-    /* line 151, sass/_header.sass */
+    /* line 152, sass/_header.sass */
     header.story_header h1 small {
       color: #548e85;
       font-family: "Adobe Caslon W01 Bd It", serif;
@@ -433,7 +437,7 @@ header.story_header {
       padding: 0 2.4px;
       text-transform: lowercase;
       vertical-align: 8px; }
-  /* line 160, sass/_header.sass */
+  /* line 161, sass/_header.sass */
   header.story_header nav {
     overflow: hidden;
     *zoom: 1;
@@ -441,20 +445,20 @@ header.story_header {
     border-bottom: 1px solid #888888;
     line-height: 1;
     padding: 12px 0 9.6px; }
-    /* line 168, sass/_header.sass */
+    /* line 169, sass/_header.sass */
     header.story_header nav li {
       letter-spacing: -1px;
       margin: 0 0.9em; }
-  /* line 173, sass/_header.sass */
+  /* line 174, sass/_header.sass */
   header.story_header.bordered hr {
     display: block; }
-  /* line 176, sass/_header.sass */
+  /* line 177, sass/_header.sass */
   header.story_header.bordered h1 {
     margin-top: -43.2px; }
-    /* line 179, sass/_header.sass */
+    /* line 180, sass/_header.sass */
     header.story_header.bordered h1 em {
       background: white; }
-  /* line 183, sass/_header.sass */
+  /* line 184, sass/_header.sass */
   header.story_header.on_dark_background h1, .chapter-1-rethinking-retirement article header.story_header h1,
   header.story_header.on_dark_background h1 small,
   .chapter-1-rethinking-retirement article header.story_header h1 small {
