--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -85,6 +85,7 @@ header.site_header
     li
       margin: 0 0.6em
       padding-bottom: 5px
+      @include transition(all, .2s)
 
       a
         color: $light
@@ -93,7 +94,7 @@ header.site_header
 
       &:hover,
       &.current_chapter
-        @include triangle-bottom(7px, #fff, up)
+        @include triangle-bottom(7px, #888, up)
         
         a
           color: #fff
