--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -91,21 +91,6 @@ section
     font-family: $font-chapter
     text-transform: uppercase
 
-.major
-  font-family: $font-heading
-  font-size: 30px
-  text-transform: uppercase
-  line-height: 1.3
-
-.major-alt
-  @extend .major
-  border-top: 2px solid $dark
-  border-bottom: 2px solid $dark
-  font-size: 20px
-  margin: 0 auto
-  padding: .5em 0
-  width: 75% 
-
 .chapter_title
   text-align: center
   text-transform: uppercase
@@ -136,3 +121,21 @@ section
     h2
       color: #fff
       @include text-shadow($dark 0 0 25px)
+
+.major
+  font-family: $font-heading
+  font-size: 30px
+  text-align: center
+  text-transform: uppercase
+  line-height: 1.3
+
+.major-alt
+  @extend .major
+  font-size: 20px
+
+.bordered
+  border-top: 2px solid $dark
+  border-bottom: 2px solid $dark
+  margin: 0 auto
+  padding: .5em 0 .4em 0
+  width: 75%
